include ids for all entities in data rest apis

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,8 @@ spring:
   h2:
     console:
       enabled: true
+springdoc:
+  paths-to-exclude: /api/data/profile/**
+
 app:
   load-mock-data: true
